starting to set up constant socket.io connection to tornadio server across rounds with refresh events pushed to participants by the experimenter

--- a/vcweb/core/templates/includes/experimenter.events.html
+++ b/vcweb/core/templates/includes/experimenter.events.html
@@ -1,13 +1,14 @@
 <script type="text/javascript">
 
+function createRefreshEvent() {
+    return createMessageEvent("Refresh all clients", "refresh");
+}
 function createConnectionEvent() {
    return createMessageEvent("Initial connection");
 }
-
 function createReconnectionEvent() {
    return createMessageEvent("Reconnecting from disconnect", "reconnect");
 }
-
 function createMessageEvent(message, event_type) {
    if (! event_type) {
       event_type = "experimenter";
@@ -19,9 +20,7 @@ function createMessageEvent(message, event_type) {
       "message": message
    };
 }
-
 function createChatEvent(message) {
    return createMessageEvent(message);
 }
-
 </script>
