--- a/vcweb/core/templates/monitor.html
+++ b/vcweb/core/templates/monitor.html
@@ -83,8 +83,11 @@
 <fieldset class='small'>
     <legend>Experiment management</legend>
     <ul class='actions'>
-        <li><a id='refreshAllParticipants' title='Sends a page refresh to all connected participants.' href='#'>Refresh all participants</a></li>
-        <li><a title='Download experiment data as a csv file.' href='download/csv'><img src='/static/images/download-icon.png' alt=''/> download data: csv</a> | <a href='download/xls'>xls</a></li>
+        <li><span id='refreshAllParticipants' title='Sends a page refresh to all connected participants.' class='actions' >
+            <span class='vcweb-icon ui-icon icon-left' style='background:url(/static/images/famfamfam/arrow_refresh.png);' alt=''></span>refresh all participants</a></li>
+        <li>
+        <a href='download/csv'><span class='vcweb-icon ui-icon icon-left' style='margin: 8px 0.15em 0px 0px; background:url(/static/images/download-icon.png);' alt=''></span>download data as <img src='/static/images/famfamfam/page_white_text.png' style='margin: 5px 0 0 0;' alt=''> csv</a> |
+        <a href='download/xls'><img src='/static/images/famfamfam/page_white_excel.png' style='margin: 5px 0 0 0;' alt=''/> xls</a></li>
     </ul>
 </fieldset>
 </p>
@@ -103,13 +106,17 @@
             <ul id='actions' class='actions tooltip' title='Use the links to start/end a round, advance to the next round, or download data. '>
                 {% if experiment.is_active %}
                     {% if experiment.is_round_in_progress %}
-                    <li><a class='confirm-experiment-action' name='end_round' href='end-round'><img src='/static/images/famfamfam/control_stop_blue.png' alt='' /> end round</a></li>
+                    <li><a class='confirm-experiment-action' name='end_round' href='end-round'>
+                        <span class='vcweb-icon icon-left ui-icon' style='background: url(/static/images/famfamfam/control_stop_blue.png);' alt=''></span>end round</a></li>
                     {% else %}
-                    <li><a class='confirm-experiment-action' name='start_round' href='start-round'><img src='/static/images/famfamfam/control_play_blue.png' alt='' /> start round</a></li>
+                    <li><a class='confirm-experiment-action' name='start_round' href='start-round'>
+                        <span class='ui-icon vcweb-icon icon-left' style='background:url(/static/images/famfamfam/control_play_blue.png);' alt=''></span>start round</a></li>
                     {% endif %}
-                    <li><a class='confirm-experiment-action' name='advance_to_next_round' href='advance-to-next-round'><img src='/static/images/famfamfam/control_fastforward_blue.png' alt=''/> advance to next round</a></li>
+                    <li><a class='confirm-experiment-action' name='advance_to_next_round' href='advance-to-next-round'>
+                        <span class='vcweb-icon ui-icon icon-left' style='background:url(/static/images/famfamfam/control_fastforward_blue.png);' alt=''></span>advance to next round</a></li>
                 {% else %}
-                    <li><a class='confirm-experiment-action' name='activate' href='activate'><img src='/static/images/famfamfam/cog_go.png' alt='' /> activate</a></li>
+                <li><a class='confirm-experiment-action' name='activate' href='activate'>
+                    <span class='vcweb-icon ui-icon icon-left' style='background:url(/static/images/famfamfam/cog_go.png);' alt=''></span>activate</a></li>
                 {% endif %}
             </ul>
             <br/>
