switching to google cdn for jquery libraries and changing socket.io commands to clickable spans (or should they be a href=javascript:void instead?)

--- a/vcweb/forestry/templates/forestry/chat.html
+++ b/vcweb/forestry/templates/forestry/chat.html
@@ -42,7 +42,7 @@ Forestry Chat Round
 {% block page %}
 <h3>Chat</h3>
     <div class='info ui-corner-all'>
-        <span class='ui-icon ui-icon-info'></span>
+        <span class='icon-left ui-icon ui-icon-info'></span>
         <b>
             Welcome back {{participant.get_full_name}}. 
             You are participant {{ participant_group_relationship.participant_number }} in {{participant_group_relationship.group}}.
