--- a/vcweb/core/templates/base-vcweb.html
+++ b/vcweb/core/templates/base-vcweb.html
@@ -12,7 +12,7 @@
         <link href="/static/css/style.css" rel="stylesheet" type="text/css" media="screen" />
         <!-- vcweb common js -->
         <script type='text/javascript' src='/static/js/common.js'></script>
-        <script type='text/javascript' src='/static/js/jquery-1.4.4.min.js'></script>
+        <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js'></script>
         <script type='text/javascript' src='/static/js/jquery.qtip-1.0.0-rc3.min.js'></script>
         {% include "includes/jquery.ui.html" %}
         {% dajaxice_js_import %}
