--- a/vcweb/core/templates/includes/jquery.ui.html
+++ b/vcweb/core/templates/includes/jquery.ui.html
@@ -1,2 +1,2 @@
 <link href="/static/css/pepper-grinder/jquery-ui-1.8.10.custom.css" rel="stylesheet" type="text/css" media="screen" />
-<script type="text/javascript" src="/static/js/jquery-ui-1.8.10.custom.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.10/jquery-ui.min.js"></script>
