socket.io + tornadio fixes.  working on communication between participants and experimenters

--- a/vcweb/core/templates/includes/participant.events.html
+++ b/vcweb/core/templates/includes/participant.events.html
@@ -14,8 +14,7 @@ function createMessageEvent(payload, event_type) {
    }
    return {
       "type": event_type,
-      "participant_id": {{participant.pk}},
-      "group_id": {{group.pk}},
+      "participant_group_relationship_id": {{participant_group_relationship.pk}},
       "message": payload
    };
 }
