renaming, minifying socket.io.js, removing jquery-1.4.4 (should probably keep a copy of the latest jquery around for local deployments eventually)
--HG--
rename : vcweb/core/templates/base-vcweb.html => vcweb/core/templates/base.html

--- a/vcweb/core/templates/includes/experimenter.events.html
+++ b/vcweb/core/templates/includes/experimenter.events.html
@@ -4,7 +4,7 @@ function createRefreshEvent() {
     return createMessageEvent("Refresh all clients", "refresh");
 }
 function createConnectionEvent() {
-   return createMessageEvent("Initial connection");
+   return createMessageEvent("Initial connection", "connect");
 }
 function createReconnectionEvent() {
    return createMessageEvent("Reconnecting from disconnect", "reconnect");
