--- a/vcweb/core/templates/includes/socket.io.html
+++ b/vcweb/core/templates/includes/socket.io.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="/static/js/socket.io.js"></script>
+<script type="text/javascript" src="/static/js/socket.io.min.js"></script>
 <script type="text/javascript">
     WEB_SOCKET_SWF_LOCATION="/static/flash/WebSocketMain.swf"
 </script>
