--- a/vcweb/core/templates/monitor.html
+++ b/vcweb/core/templates/monitor.html
@@ -62,6 +62,7 @@
                 next.toggle('fast');
             });
             $('#refreshAllParticipants').click(function(evt) {
+                console.log("sending refresh event");
                 s.send(createRefreshEvent());
                 return false;
             });
